fix names of classes, functions, and variables to align with generic filter naming

--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@ button:focus {
   opacity: 0.8;
 }
 
-.cocktail-categories {
+.filtered-options {
   display: inline-flex;
   flex-direction: row;
   list-style-type: none;
@@ -69,13 +69,13 @@ button:focus {
   flex-wrap: wrap;
 }
 
-.cocktail-categories button {
+.filtered-options button {
   width: 300px;
   height: 50px;
   font-size: larger;
 }
 
-.cocktail-drinks {
+.drinks {
   list-style: none;
   width: 250px;
 }
